--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Project Boilerplate</title>
   <link rel="stylesheet" href="/styles/styles.css">
-  <script src="bundle.js"></script>
 </head>
 <body>
-
+  <div id="root"></div>
 </body>
+<script src="bundle.js"></script>
 </html>
